--- a/index.html
+++ b/index.html
@@ -168,9 +168,9 @@
                                         <td>
                                           <div class="container-fluid">
                                           <img src="https://chart.googleapis.com/chart?cht=qr&chl=Hello+World&chs=160x160&chld=L|0"
-                                               class="qr-code img-thumbnail img-responsive"  id="generate">
+                                               class="qr-code1 img-thumbnail img-responsive"  id="generate">
                                             <div class="form-horizontal">
-                                              <div class="form-group" id="URL1">
+                                              <div class="form-group">
                                                   <p type="text"  id="content1" style="display:none">https://bit.ly/2RrpyWS
                                               </div>
                                             </div>
@@ -197,10 +197,10 @@
                                             <td>
                                               <div class="container-fluid">
                                                 <img src="https://chart.googleapis.com/chart?cht=qr&chl=Hello+World&chs=160x160&chld=L|0"
-                                                     class="qr-code img-thumbnail img-responsive"  id="generate">
+                                                     class="qr-code2 img-thumbnail img-responsive"  id="generate">
 
                                                 <div class="form-horizontal">
-                                                  <div class="form-group" id="URL2">
+                                                  <div class="form-group">
                                                       <p type="text"  id="content2" style="display:none">https://bit.ly/2NjlGE7
                                                   </div>
                                                 </div>
@@ -226,10 +226,10 @@
                                             <td>
                                               <div class="container-fluid">
                                                 <img src="https://chart.googleapis.com/chart?cht=qr&chl=Hello+World&chs=160x160&chld=L|0"
-                                                     class="qr-code img-thumbnail img-responsive"  id="generate">
+                                                     class="qr-code3 img-thumbnail img-responsive"  id="generate">
 
                                                 <div class="form-horizontal">
-                                                  <div class="form-group" id="URL3">
+                                                  <div class="form-group">
                                                       <p type="text"  id="content3" style="display:none">https://bit.ly/2IxsHQG
                                                   </div>
                                                 </div>
@@ -255,10 +255,10 @@
                                           <td>
                                             <div class="container-fluid">
                                                     <img src="https://chart.googleapis.com/chart?cht=qr&chl=Hello+World&chs=160x160&chld=L|0"
-                                                     class="qr-code img-thumbnail img-responsive"  id="generate">
+                                                     class="qr-code4 img-thumbnail img-responsive"  id="generate">
 
                                                     <div class="form-horizontal">
-                                                      <div class="form-group" id="URL4">
+                                                      <div class="form-group">
                                                           <p type="text"  id="content4" style="display:none">https://bit.ly/2DRjtjN
                                                       </div>
                                                     </div>
