--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
                             <div class="carousel-item"><img class="w-100 d-block" src="https://i.imgur.com/rnmUZAq.jpg" alt="Slide Image"></div>
 
                             <!-- 海報3 -->
-                            <!-- <div class="carousel-item"><img class="w-100 d-block" src="" alt="Slide Image"></div> -->
+                            <div class="carousel-item"><img class="w-100 d-block" src="assets/img/podcast_competition_website2.png"alt="Slide Image"></div>
                             <!-- 海報4 -->
                             <!-- <div class="carousel-item"><img class="w-100 d-block" src="" alt="Slide Image"></div> -->
                         </div>
@@ -342,11 +342,8 @@
                             <!-- css class active should be put at the carousel-item 1 -->
                             <li data-target="#carousel-1" data-slide-to="0" class="active"></li>
                             <li data-target="#carousel-1" data-slide-to="1"></li>
-
-                            <!-- 目前海報3 4的indicator button，先註解掉 -->
-
-                            <!-- <li data-target="#carousel-1" data-slide-to="2"></li>
-                            <li data-target="#carousel-1" data-slide-to="3"></li> -->
+                            <li data-target="#carousel-1" data-slide-to="2"></li>
+                            <!-- <li data-target="#carousel-1" data-slide-to="3"></li> -->
                         </ol>
                     </div>
                 </div>
