--- a/index.html
+++ b/index.html
@@ -130,9 +130,9 @@
                           <table class="table">
                               <thead style="font-size:18px;">
                                   <tr style="height:43px;">
-                                      <th class="text-center" style="width:23.5%;">日期</th>
-                                      <th class="text-center" style="width:25%;">活動類別</th>
-                                      <th class="text-center" style="width:25%;">內容</th>
+                                      <th class="text-center" style="width:22%;">日期</th>
+                                      <th class="text-center" style="width:24%;">活動類別</th>
+                                      <th class="text-center" style="width:15%;">內容</th>
                                       <th class="text-center">詳細資訊</th>
                                   </tr>
                               </thead>
@@ -153,7 +153,7 @@
 
                       <ul class="d-table-cell" style="width:394px;height:300px;margin-left:0px;margin-bottom:0px;">
 
-                        <li style="height:110px;">
+                        <li style="height:162px;">
                           <div class="table-responsive">
                             <table class="table">
                                 <tbody>
@@ -163,12 +163,12 @@
                                             <p style="margin-bottom:0px;">10:00am</p>
                                             <p style="margin-bottom:0px;">USR</p>
                                         </td>
-                                        <td style="width:25%;">高齡社區系列講座</td>
-                                        <td style="width:25%;">高齡者與災害管理</td>
+                                        <td style="width:20%;">高齡社區系列講座</td>
+                                        <td style="width:19%;">高齡者與災害管理</td>
                                         <td>
                                           <div class="container-fluid">
                                           <img src="https://chart.googleapis.com/chart?cht=qr&chl=Hello+World&chs=160x160&chld=L|0"
-                                               class="qr-code1 img-thumbnail img-responsive"  id="generate">
+                                               class="qr-code1 img-thumbnail img-responsive"  style="height:110px" id="generate">
                                             <div class="form-horizontal">
                                               <div class="form-group">
                                                   <p type="text"  id="content1" style="display:none">https://bit.ly/2RrpyWS
@@ -182,7 +182,7 @@
                           </div>
                           </li>
 
-                          <li style="height:110px;">
+                          <li style="height:162px;">
                             <div class="table-responsive">
                                 <table class="table">
                                     <tbody>
@@ -192,12 +192,12 @@
                                                 <p style="margin-bottom:0px;">10:00am</p>
                                                 <p style="margin-bottom:0px;">USR</p>
                                             </td>
-                                            <td style="width:25%;">高齡社區系列講座</td>
-                                            <td style="width:25%;">高齡者與醫療自主</td>
+                                            <td style="width:20%;">高齡社區系列講座</td>
+                                            <td style="width:19%;">高齡者與醫療自主</td>
                                             <td>
                                               <div class="container-fluid">
                                                 <img src="https://chart.googleapis.com/chart?cht=qr&chl=Hello+World&chs=160x160&chld=L|0"
-                                                     class="qr-code2 img-thumbnail img-responsive"  id="generate">
+                                                     class="qr-code2 img-thumbnail img-responsive" style="height:110px" id="generate">
 
                                                 <div class="form-horizontal">
                                                   <div class="form-group">
@@ -211,7 +211,7 @@
                                 </table>
                             </div>
                           </li>
-                          <li style="height:110px;">
+                          <li style="height:162px;">
                             <div class="table-responsive">
                                 <table class="table">
                                     <tbody>
@@ -221,12 +221,12 @@
                                                 <p style="margin-bottom:0px;">02:30pm</p>
                                                 <p style="margin-bottom:0px;">USR</p>
                                             </td>
-                                            <td style="width:25%;">高齡電影賞析</td>
-                                            <td style="width:25%;">桃姐</td>
+                                            <td style="width:20%;">高齡電影賞析</td>
+                                            <td style="width:19%;">桃姐</td>
                                             <td>
                                               <div class="container-fluid">
                                                 <img src="https://chart.googleapis.com/chart?cht=qr&chl=Hello+World&chs=160x160&chld=L|0"
-                                                     class="qr-code3 img-thumbnail img-responsive"  id="generate">
+                                                     class="qr-code3 img-thumbnail img-responsive" style="height:110px" id="generate">
 
                                                 <div class="form-horizontal">
                                                   <div class="form-group">
@@ -240,7 +240,7 @@
                                 </table>
                             </div>
                         </li>
-                        <li style="height:110px;">
+                        <li style="height:162px;">
                           <div class="table-responsive">
                               <table class="table">
                                   <tbody>
@@ -250,12 +250,12 @@
                                               <p style="margin-bottom:0px;">02:30pm</p>
                                               <p style="margin-bottom:0px;">USR</p>
                                           </td>
-                                          <td style="width:25%;">高齡電影賞析</td>
-                                          <td style="width:25%;">高年級實習生</td>
+                                          <td style="width:20%;">高齡電影賞析</td>
+                                          <td style="width:19%;">高年級實習生</td>
                                           <td>
                                             <div class="container-fluid">
                                                     <img src="https://chart.googleapis.com/chart?cht=qr&chl=Hello+World&chs=160x160&chld=L|0"
-                                                     class="qr-code4 img-thumbnail img-responsive"  id="generate">
+                                                     class="qr-code4 img-thumbnail img-responsive" style="height:110px" id="generate">
 
                                                     <div class="form-horizontal">
                                                       <div class="form-group">
