將QRCODE設成可追蹤

--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
                                                 <figure class="figure" style="margin-right:10px;width:280%"><img class="img-fluid figure-img zoomImage rounded" style="height:160%" src="https://i.imgur.com/0O3Nlsq.png"></figure>
                                                 <div class="d-flex flex-column flex-wrap" style="margin-left:10px;">
                                                     <div>
-                                                        <h4><strong>社科院USR發表「社工系志工隊」簡介影片</strong><br></h4><button class="btn btn-info btn-sm btn-outline-light" type="button" style="background-color:rgb(23,162,184);font-size:12.5px;height:20px;color:rgb(255,255,255);padding-top:0px;margin-bottom:7px;margin-top:2px;">社科院社會實踐計畫</button>
-                                                        <p style="font-size: 17px">王群同學所拍攝的志工隊影片全長約15分鐘，訪問對象包括志工隊幹部、合作單位負責人、社科院曾敏傑院長、以及志工隊魏希聖指導老師等多人，透過影片可以看到本校社工系志工隊的服務樣態、同學的心得、機構的觀點、以及老師們的期待等。</p>
+                                                        <h4><strong>社科院USR邀請榮民伯伯聆聽國慶音樂會</strong><br></h4><button class="btn btn-info btn-sm btn-outline-light" type="button" style="background-color:rgb(23,162,184);font-size:12.5px;height:20px;color:rgb(255,255,255);padding-top:0px;margin-bottom:7px;margin-top:2px;">方案執行</button>
+                                                        <p style="font-size: 17px">十月八日(週一)上午10時，在本校公共事務學院119演講廳，由通識中心和社科院USR計畫合辦了「國慶日暨通識月開幕音樂會」-《聆聽畫家張金發的臺灣人文風景》，會場來自三峽白雞「台北榮民之家」的三十餘位榮民伯伯，也成為這場音樂會最重要的嘉賓。</p>
                                                     </div>
                                                 </div>
                                             </div>
@@ -171,7 +171,7 @@
                                                class="qr-code1 img-thumbnail img-responsive"  style="height:110px" id="generate">
                                             <div class="form-horizontal">
                                               <div class="form-group">
-                                                  <p type="text"  id="content1" style="display:none">https://bit.ly/2RrpyWS
+                                                  <p type="text"  id="content1" style="display:none">http://bit.ly/2CE0ms0
                                               </div>
                                             </div>
                                           </div>
@@ -201,7 +201,7 @@
 
                                                 <div class="form-horizontal">
                                                   <div class="form-group">
-                                                      <p type="text"  id="content2" style="display:none">https://bit.ly/2NjlGE7
+                                                      <p type="text"  id="content2" style="display:none">http://bit.ly/2Po7POl
                                                   </div>
                                                 </div>
                                               </div>
@@ -230,7 +230,7 @@
 
                                                 <div class="form-horizontal">
                                                   <div class="form-group">
-                                                      <p type="text"  id="content3" style="display:none">https://bit.ly/2IxsHQG
+                                                      <p type="text"  id="content3" style="display:none">http://bit.ly/2OQRsNy
                                                   </div>
                                                 </div>
                                               </div>
@@ -259,7 +259,7 @@
 
                                                     <div class="form-horizontal">
                                                       <div class="form-group">
-                                                          <p type="text"  id="content4" style="display:none">https://bit.ly/2DRjtjN
+                                                          <p type="text"  id="content4" style="display:none">http://bit.ly/2pO4FIT
                                                       </div>
                                                     </div>
                                             </div>
