--- a/index.html
+++ b/index.html
@@ -47,11 +47,11 @@
                                     <div class="card-container manual-flip">
                                         <div class="card">
                                             <div class="card-body d-flex align-content-start front">
-                                                <figure class="figure" style="margin-right:10px;width:280%"><img class="img-fluid figure-img zoomImage rounded" style="height:160%" src="https://i.imgur.com/0O3Nlsq.png"></figure>
+                                                <figure class="figure" style="margin-right:10px;width:280%"><img class="img-fluid figure-img zoomImage rounded" style="height:160%" src="https://i.imgur.com/NerDSJt.jpg "></figure>
                                                 <div class="d-flex flex-column flex-wrap" style="margin-left:10px;">
                                                     <div>
                                                         <h4><strong>社科院USR邀請榮民伯伯聆聽國慶音樂會</strong><br></h4><button class="btn btn-info btn-sm btn-outline-light" type="button" style="background-color:rgb(23,162,184);font-size:12.5px;height:20px;color:rgb(255,255,255);padding-top:0px;margin-bottom:7px;margin-top:2px;">方案執行</button>
-                                                        <p style="font-size: 17px">十月八日(週一)上午10時，在本校公共事務學院119演講廳，由通識中心和社科院USR計畫合辦了「國慶日暨通識月開幕音樂會」-《聆聽畫家張金發的臺灣人文風景》，會場來自三峽白雞「台北榮民之家」的三十餘位榮民伯伯，也成為這場音樂會最重要的嘉賓。</p>
+                                                        <p style="font-size: 17px">十月八日(週一)上午10時，在本校公共事務學院119演講廳，由通識中心和社科院USR計畫合辦了「國慶日暨通識月開幕音樂會」-《聆聽畫家張金發的臺灣人文風景》，會場來自三峽白雞「台北榮民之家」的三十餘位榮民伯伯，成為這場音樂會最重要的嘉賓。</p>
                                                     </div>
                                                 </div>
                                             </div>
