--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 
                       <ul class="d-table-cell" style="width:394px;height:300px;margin-left:0px;margin-bottom:0px;">
 
-                
+
 
                           <li style="height:162px;">
                             <div class="table-responsive">
@@ -298,10 +298,9 @@
                             <div class="carousel-item"><img class="w-100 d-block" src="assets/img/podcast_competition_website2.png"alt="Slide Image"></div>
 
                             <!-- 海報4 -->
-                            <div class="carousel-item"><img class="w-100 d-block" src="https://i.imgur.com/vKmbgeF.jpg" alt="Slide Image"></div>
+                            <div class="carousel-item"><img class="w-100 d-block" src="https://i.imgur.com/Gt6HyoE.jpg" alt="Slide Image"></div>
 
-                            <!-- 海報5 -->
-                            <div class="carousel-item"><img class="w-100 d-block" src="https://i.imgur.com/8sq3HiT.jpg" alt="Slide Image"></div>
+
                             <!-- <div class="carousel-item"><img class="w-100 d-block" src="" alt="Slide Image"></div> -->
                         </div>
                         <div class="invisible">
@@ -322,8 +321,8 @@
                             <li data-target="#carousel-1" data-slide-to="1"></li>
                             <li data-target="#carousel-1" data-slide-to="2"></li>
                             <li data-target="#carousel-1" data-slide-to="3"></li>
-                            <li data-target="#carousel-1" data-slide-to="4"></li>
-                            <!-- <li data-target="#carousel-1" data-slide-to="5"></li> -->
+
+                            <!-- <li data-target="#carousel-1" data-slide-to="4"></li> -->
                         </ol>
                     </div>
                 </div>
