--- a/index.html
+++ b/index.html
@@ -292,13 +292,7 @@
                             <!-- css class active should be put at the carousel-item 1 -->
                             <div class="carousel-item active" style="height:496px;"><img class="w-100 d-block" src="assets/img/S__24641574.jpg" alt="Slide Image"></div>
                             <!-- 海報2 -->
-                            <div class="carousel-item"><img class="w-100 d-block" src="https://i.imgur.com/rnmUZAq.jpg" alt="Slide Image"></div>
-
-                            <!-- 海報3 -->
-                            <div class="carousel-item"><img class="w-100 d-block" src="assets/img/podcast_competition_website2.png"alt="Slide Image"></div>
-
-                            <!-- 海報4 -->
-                            <div class="carousel-item"><img class="w-100 d-block" src="https://i.imgur.com/Gt6HyoE.jpg" alt="Slide Image"></div>
+                            <div class="carousel-item"><img class="w-100 d-block" src="https://i.imgur.com/vbnPeCL.jpg" alt="Slide Image"></div>
 
 
                             <!-- <div class="carousel-item"><img class="w-100 d-block" src="" alt="Slide Image"></div> -->
@@ -319,10 +313,9 @@
                             <!-- css class active should be put at the carousel-item 1 -->
                             <li data-target="#carousel-1" data-slide-to="0" class="active"></li>
                             <li data-target="#carousel-1" data-slide-to="1"></li>
-                            <li data-target="#carousel-1" data-slide-to="2"></li>
-                            <li data-target="#carousel-1" data-slide-to="3"></li>
 
-                            <!-- <li data-target="#carousel-1" data-slide-to="4"></li> -->
+
+                            <!-- <li data-target="#carousel-1" data-slide-to="2"></li> -->
                         </ol>
                     </div>
                 </div>
