更新學生活動跑馬燈

--- a/index.html
+++ b/index.html
@@ -161,12 +161,12 @@
                                     <tbody>
                                         <tr>
                                             <td style="width:20%;">
-                                                <p style="margin-bottom:0px;">11-09</p>
+                                                <p style="margin-bottom:0px;">12-21</p>
                                                 <p style="margin-bottom:0px;">10:00am</p>
                                                 <p style="margin-bottom:0px;">USR</p>
                                             </td>
                                             <td style="width:20%;">高齡社區系列講座</td>
-                                            <td style="width:19%;">高齡者與醫療自主</td>
+                                            <td style="width:19%;">高齡者與財產信託</td>
                                             <td>
                                               <div class="container-fluid">
                                                 <img src="https://chart.googleapis.com/chart?cht=qr&chl=Hello+World&chs=160x160&chld=L|0"
@@ -174,7 +174,7 @@
 
                                                 <div class="form-horizontal">
                                                   <div class="form-group">
-                                                      <p type="text"  id="content2" style="display:none">http://bit.ly/2Po7POl
+                                                      <p type="text"  id="content2" style="display:none">http://usrsoc.ntpu.edu.tw/events/2018-12-21-events.html
                                                   </div>
                                                 </div>
                                               </div>
@@ -190,20 +190,20 @@
                                     <tbody>
                                         <tr>
                                             <td style="width:20%;">
-                                                <p style="margin-bottom:0px;">11-14</p>
-                                                <p style="margin-bottom:0px;">02:30pm</p>
-                                                <p style="margin-bottom:0px;">USR</p>
+                                                <p style="margin-bottom:0px;">12-23</p>
+                                                <p style="margin-bottom:0px;">05:00pm</p>
+                                                <p style="margin-bottom:0px;">社科院</p>
                                             </td>
-                                            <td style="width:20%;">高齡電影賞析</td>
-                                            <td style="width:19%;">桃姐</td>
+                                            <td style="width:20%;">音樂會</td>
+                                            <td style="width:19%;">閃亮臺北大學城點燈暨音樂會</td>
                                             <td>
                                               <div class="container-fluid">
                                                 <img src="https://chart.googleapis.com/chart?cht=qr&chl=Hello+World&chs=160x160&chld=L|0"
-                                                     class="qr-code3 img-thumbnail img-responsive" style="height:110px" id="generate">
+                                                     class="qr-code2 img-thumbnail img-responsive" style="height:110px" id="generate">
 
                                                 <div class="form-horizontal">
                                                   <div class="form-group">
-                                                      <p type="text"  id="content3" style="display:none">http://bit.ly/2OQRsNy
+                                                      <p type="text"  id="content2" style="display:none">http://www.ntpu.edu.tw/college/e4/news_more.php?id=828
                                                   </div>
                                                 </div>
                                               </div>
@@ -212,36 +212,7 @@
                                     </tbody>
                                 </table>
                             </div>
-                        </li>
-                        <li style="height:162px;">
-                          <div class="table-responsive">
-                              <table class="table">
-                                  <tbody>
-                                      <tr>
-                                          <td style="width:20%;">
-                                              <p style="margin-bottom:0px;">11-26</p>
-                                              <p style="margin-bottom:0px;">02:30pm</p>
-                                              <p style="margin-bottom:0px;">USR</p>
-                                          </td>
-                                          <td style="width:20%;">高齡電影賞析</td>
-                                          <td style="width:19%;">高年級實習生</td>
-                                          <td>
-                                            <div class="container-fluid">
-                                                    <img src="https://chart.googleapis.com/chart?cht=qr&chl=Hello+World&chs=160x160&chld=L|0"
-                                                     class="qr-code4 img-thumbnail img-responsive" style="height:110px" id="generate">
-
-                                                    <div class="form-horizontal">
-                                                      <div class="form-group">
-                                                          <p type="text"  id="content4" style="display:none">http://bit.ly/2pO4FIT
-                                                      </div>
-                                                    </div>
-                                            </div>
-                                          </td>
-                                      </tr>
-                                  </tbody>
-                              </table>
-                          </div>
-                        </li>
+                          </li>
                       </ul>
                   </div>
                 </div>
