更新USR跑馬燈

--- a/index.html
+++ b/index.html
@@ -43,15 +43,15 @@
                             <div class="carousel-inner d-block" role="listbox" style="width:auto;height:275px;">
 
                                 <!-- USR活動跑馬燈1 -->
-                                <div class="carousel-item"><img class="w-100 d-block" src="assets/img/S__24641574.jpg" alt="Slide Image" style="height:0;">
+                                <div class="carousel-item"><img class="w-100 d-block" src="https://i.imgur.com/NWjaxfN.jpg" alt="Slide Image" style="height:0;">
                                     <div class="card-container manual-flip">
                                         <div class="card">
                                             <div class="card-body d-flex align-content-start front">
                                                 <figure class="figure" style="margin-right:10px;width:280%"><img class="img-fluid figure-img zoomImage rounded" style="height:160%" src="https://i.imgur.com/NerDSJt.jpg "></figure>
                                                 <div class="d-flex flex-column flex-wrap" style="margin-left:10px;">
                                                     <div>
-                                                        <h4><strong>社科院USR邀請榮民伯伯聆聽國慶音樂會</strong><br></h4><button class="btn btn-info btn-sm btn-outline-light" type="button" style="background-color:rgb(23,162,184);font-size:12.5px;height:20px;color:rgb(255,255,255);padding-top:0px;margin-bottom:7px;margin-top:2px;">方案執行</button>
-                                                        <p style="font-size: 17px">十月八日(週一)上午10時，在本校公共事務學院119演講廳，由通識中心和社科院USR計畫合辦了「國慶日暨通識月開幕音樂會」-《聆聽畫家張金發的臺灣人文風景》，會場來自三峽白雞「台北榮民之家」的三十餘位榮民伯伯，成為這場音樂會最重要的嘉賓。</p>
+                                                        <h4><strong>「戲說三鶯兒童劇」演後的感動</strong><br></h4><button class="btn btn-info btn-sm btn-outline-light" type="button" style="background-color:rgb(23,162,184);font-size:12.5px;height:20px;color:rgb(255,255,255);padding-top:0px;margin-bottom:7px;margin-top:2px;">師生觀點</button>
+                                                        <p style="font-size: 17px">這個學期，北大校園真的很有藝術氛圍，從國慶日音樂會、四手鋼琴聯彈，而到這場戲說三鶯兒童劇，以及12月15日剛辦完的北大管樂節，還有12月23日即將舉行的點燈音樂會，將由柏拉奇管弦樂團和北大管樂團合作演出。</p>
                                                     </div>
                                                 </div>
                                             </div>
@@ -66,20 +66,20 @@
                                             <div class="card-body d-inline-flex justify-content-around align-content-start front">
                                                 <figure class="figure flex-shrink-0 rounded" style="margin-right:10px;height:250px;width:210px;margin-bottom:5px;"><img class="figure-img rounded" src="https://i.imgur.com/z8nhGVE.jpg">" style="width:100%;height:100%;"></figure>
                                                 <div class="d-flex flex-column flex-wrap" style="margin-left:10px;">
-                                                    <h3><strong>高齡社區系列講座：高齡者與災害管理</strong></h3>
+                                                    <h3><strong>高齡社區系列講座：高齡者與財產信託</strong></h3>
                                                     <div class="d-inline-flex justify-content-start align-items-center">
                                                       <button class="btn btn-info btn-sm btn-outline-light" type="button" style="background-color:rgb(23,162,184);font-size:12.5px;height:20px;color:rgb(255,255,255);padding-top:0px;margin:2.5px;margin-bottom:2px;margin-top:2px;margin-right:2px;">老人年口</button>
                                                       <button class="btn btn-info btn-sm btn-outline-light" type="button" style="background-color:rgb(23,162,184);font-size:12.5px;height:20px;color:rgb(255,255,255);padding-top:0px;margin:2.5px;margin-top:2px;">社區系列講座</button>
-                                                      <button class="btn btn-info btn-sm btn-outline-light" type="button" style="background-color:rgb(23,162,184);font-size:12.5px;height:20px;color:rgb(255,255,255);padding-top:0px;margin:2.5px;margin-bottom:2px;margin-top:2px;">災害管理</button></div>
+                                                      <button class="btn btn-info btn-sm btn-outline-light" type="button" style="background-color:rgb(23,162,184);font-size:12.5px;height:20px;color:rgb(255,255,255);padding-top:0px;margin:2.5px;margin-bottom:2px;margin-top:2px;">財產信託</button></div>
                                                     <div
                                                         class="d-inline-flex align-items-center flex-nowrap" style="margin:1px;"><i class="fa fa-clock-o" style="font-size:20px;"></i>
-                                                        <p style="margin-bottom:0px;margin-left:10px;font-size:17px;">10/19 (五）10:00 ~ 11:30&nbsp;</p>
+                                                        <p style="margin-bottom:0px;margin-left:10px;font-size:17px;">12/21 (五）10:00 ~ 11:30&nbsp;</p>
                                                 </div>
                                                 <div class="d-inline-flex align-items-start flex-nowrap" style="margin:1px;margin-left:0px;"><i class="icon ion-ios-location" style="font-size:20px;margin-left:3px;"></i>
                                                     <p style="margin-bottom:0px;margin-left:10px;font-size:17px;">三峽北大公共托老中心(三峽區學成路396號2樓之一)</p>
                                                 </div>
                                                 <div class="d-inline-flex align-items-start flex-nowrap" style="margin:1px;margin-left:0px;"><i class="far fa-thumbs-up" style="font-size:20px;margin-left:3px;"></i>
-                                                    <p style="margin-bottom:0px;margin-left:10px;font-size:17px;">「高齡電影賞析」及「高齡者社區系列講座」，即日起開放報名，活動完全免費，歡迎師生與社區民眾參加。</p>
+                                                    <p style="margin-bottom:0px;margin-left:10px;font-size:17px;">「高齡者社區系列講座」，活動完全免費，歡迎師生與社區民眾參加。</p>
                                                 </div>
                                             </div>
                                         </div>
